--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <embed src="/Books/.NET/Pro_ASPNET_Identity.pdf" width="100%" height="745px" />
+    <h3>PDF Books</h3>
+    <embed src="~./Books/.NET/Pro_ASPNET_Identity.pdf" width="100%" height="745px" />
 </body>
 
 </html>
