--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <h3>PDF Books</h3>
-    <embed src="https://ikrenus.github.io/Books/.NET/Pro_ASPNET_Identity.pdf" width="100%" height="745px"
-        type="application/pdf" />
+    <embed src="https://ikrenus.github.io/Pro_ASPNET_Identity.pdf" width="100%" height="745px" type="application/pdf" />
+    <embed src="https://ikrenus.github.io/Pro_ASPNET_Identity.pdf" width="100%" height="745px" />
 </body>
 
 </html>
