--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h3>PDF Books</h3>
-    <embed src="https://ikrenus.github.io/Books/Pro_ASPNET_Identity.pdf" width="100%" height="745px" />
+    <embed src="https://ikrenus.github.io/Books/Pro_ASPNET_Identity.pdf" width="100%" />
 </body>
 
 </html>
